--- a/static/style.css
+++ b/static/style.css
@@ -1,48 +1,73 @@
-body {
-    margin: 0;
-    padding: 0;
-    font-family: Arial, sans-serif;
-}
-.icon{
+body{
+    background: rgb(35,136,67);
+    background: radial-gradient(circle, rgba(35,136,67,1) 0%, rgba(32,120,104,1) 100%);
+  }
+  
+  /* ÍCONE */
+  .bxs-leaf:before {
+    font-size: 15vh;
+    margin: auto;  
+  }
+  
+  
+  form{
     display: flex;
-    justify-content: center;
-    font-size: 500%;
-}
-
-.sidebar {
-    width: 200px;
-    height: 100%;
+    background-color: #207868;
+    width: 50vh;
+    flex-direction: column;
+    align-items: center;
+    margin: 25vh auto auto auto;
+    border-radius: 15px;
+    border: 1px solid #666af5;
+    box-shadow: 5px 5px 10px darkgreen;
+  }
+  
+  label{
+    font-size: 4vh;
+    font-family: Arial, Helvetica, sans-serif;
+    margin-top: 2vh;
+    color: #ffffff;
+  }
+  
+  p{
+    color: white;
+    font-size: 2vh;
+  }
+  
+  input{
+    border-radius: 15px;
+    text-align: center;
+    background-color: #207868;
+    border-color: white;
+    border-style: solid;
+    padding: 1vh;
+  }
+  
+  .button{
+    width: auto;
+    margin-bottom: 1vh;
     background-color: #207868;
     color: white;
-    position: fixed;
-    top: 0;
-    left: 0;
-    padding-top: 20px;
-}
-
-.sidebar a {
+    padding: 1vh;
+    border-radius: 15px;
+    border-style: solid;
+    border-color: white;
+    cursor: pointer;
+  }
+  
+  .button:hover{
+    border-color: #666af5;
+    color: #666af5;
+  }
+  
+  a{
     color: white;
-    text-decoration: none;
-    padding: 10px 20px;
-    display: block;
-}
+    font-size: 2vh;
+    cursor: pointer;
+  }
+  
+  a:hover{
+    color:#666af5;
+  }
 
-.sidebar a:hover {
-    background-color: #555;
-}
-
-
-.content {
-    margin-left: 37%;
-    padding: 20px;
-    width: 500px;
-    height: 350px;
-    background-color: #B7DB97;
-    margin-top: 10%;
-    border: 1px solid #207868;
-    white-space-collapse: preserve;
-}
-.login{
-    display:flex;
-    justify-content:center;
-}
+  
