--- a/templates/index.html
+++ b/templates/index.html
@@ -1,33 +1,26 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <link rel="stylesheet" href="/static/style.css">
-    <title>HOME</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="static/style.css">
+  <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+  <title>Login</title>
 </head>
+
 <body>
-    <div class="sidebar">
-      <div class="icon">
-        <i class='bx bxs-leaf' style='color:#0ee422'></i>
-      </div>
-    </div>
-    <div class="content">
-        <form method="post">
-            <div class="login">
-                <label for="username">USUÁRIO</label>
-                <input type="text" id="username" name="username" required>
-            </div>
-            <div class="login">
-                <label for="password">SENHA</label>
-                <input type="password" id="password" name="password" required>
-            </div>
-            <div class="login">
-                <input type="button" value="CONFIRMAR">
-                <a href="/algorithm">HOME</a>
-            </div>
-        </form>
-    </div>
+  <div class="container">
+  <div class="column1">
+  <form action="algorithm">
+    <label for="login">Login</label>
+    <p>Entre com seu login e senha!</p>
+    <input type="text" id="login" name="login" placeholder="usuário"><br>
+    <input type="text" id="senha" name="senha" placeholder="senha"><br>
+    <a href="*">Esqueceu a senha?</a><br>
+    <input class="button" type="submit" value="CONFIRMAR">
+  </form>
+  </div>
+</div>
 </body>
 </html>
