--- a/templates/teste.html
+++ b/templates/teste.html
@@ -1,15 +1,11 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TESTE</title>
+    <title>Document</title>
 </head>
 <body>
-    <h1>Olá, {{ name }}!</h1>
-
-{% if name == "alex" %}
-    <p>Bem-vindo de volta!</p>
-{% endif %}
+    <h1>Hello world!</h1>
 </body>
 </html>
