--- a/templates/admin.html
+++ b/templates/admin.html
@@ -14,10 +14,10 @@
         <button class="button" type="button" id="add">+ADICIONAR</button>
         <button class="button" type="button">-REMOVER</button>
 
-            <form action="/add" style="display: none;" id="form_add">
-                <input type="text" name="email" id="user" placeholder="usuário">
-                <input type="email" name="email" id="email" placeholder="e-mail">
-                <input type="password" name="email" id="password" placeholder="senha">
+            <form action="/admin" style="display: none;" id="form_add">
+                <input type="text" name="emails" id="users" placeholder="usuário">
+                <input type="email" name="emails" id="emails" placeholder="e-mail">
+                <input type="password" name="passwords" id="passwords" placeholder="senha">
                 <button type="submit" class="button">Enviar</button>
             </form>
 
