--- a/static/algorithm.css
+++ b/static/algorithm.css
@@ -5,11 +5,11 @@ body{
   .container {
     display: grid;
     grid-template-columns: 0.2fr 0.2fr 1fr;
-    gap: 5px;
+    gap: 3px;
     min-height: 97vh;
   }
   .column {
-    background-color: #207868;
+    background-color: #2ba18c;
     padding: 2px;
     border: 1px solid #ccc;
   }
@@ -33,7 +33,7 @@ body{
   .links{
     display: flex;
     justify-content: center;
-    padding: 5vh;
+    padding: 2vh 5vh 1vh 5vh;
   }
   
   hr{
@@ -59,7 +59,7 @@ body{
     align-items: center;
     justify-content: center;
     border-radius: 35%;
-    border: 2px solid #0109ff;
+    border: 2px solid #ece917de;
   }
   
   .button{
@@ -98,3 +98,16 @@ p{
   font-size: 115%;
   text-align: center;
 }
+
+.results{
+    width: 35vh;
+    display: flex;
+    justify-content: flex-end;
+    text-align: center;
+    background-color: #4dbf59;
+    border-radius: 10px;
+    color: #f7f8f7;
+    border: double;
+    flex-direction: column;
+    margin: 2vh auto auto auto;
+  }
