feito gráfico, média e desvio padrão

--- a/templates/admin.html
+++ b/templates/admin.html
@@ -15,7 +15,7 @@
         <button class="button" type="button">-REMOVER</button>
 
             <form action="/admin" style="display: none;" id="form_add">
-                <input type="text" name="emails" id="users" placeholder="usuário">
+                <input type="text" name="users" id="users" placeholder="usuário">
                 <input type="email" name="emails" id="emails" placeholder="e-mail">
                 <input type="password" name="passwords" id="passwords" placeholder="senha">
                 <button type="submit" class="button">Enviar</button>
@@ -30,7 +30,6 @@
                 <th>ADMINISTRADOR</th>
                 <th>CRIADO EM</th>
             </tr>
-            
         </table>
     </main>
     <script>
