--- a/static/algorithm.css
+++ b/static/algorithm.css
@@ -62,31 +62,18 @@ body{
     border: 2px solid #ece917de;
   }
   
-  .button{
-    width: auto;
-    margin: 3.5vh 0vh 0vh 6vh;
-    padding: 1vh;
-    border-radius: 15px;
-    cursor: pointer;
-  }
+.button{
+  width: auto;
+  margin: 3.5vh 0vh 0vh 6vh;
+  padding: 1vh;
+  border-radius: 15px;
+  cursor: pointer;
+}
   
-  .button:hover{
-    color: #ffffff;
-    border-color: white;
-  }
-  
-  .table{
-    width: 35vh;
-    display: flex;
-    justify-content: flex-end;
-    text-align: center;
-    background-color: #4dbf59;
-    border-radius: 10px;
-    color: #f7f8f7;
-    border: double;
-    flex-direction: column;
-    margin: 2vh auto auto auto;
-  }
+.button:hover{
+  color: #ffffff;
+  border-color: white;
+}
 
 #iframe_id{
   width: 135vh;
@@ -100,14 +87,42 @@ p{
 }
 
 .results{
-    width: 35vh;
-    display: flex;
-    justify-content: flex-end;
-    text-align: center;
-    background-color: #4dbf59;
-    border-radius: 10px;
-    color: #f7f8f7;
-    border: double;
-    flex-direction: column;
-    margin: 2vh auto auto auto;
-  }
+  width: 35vh;
+  display: flex;
+  justify-content: flex-end;
+  text-align: center;
+  background-color: #4dbf59;
+  border-radius: 10px;
+  color: #f7f8f7;
+  border: double;
+  flex-direction: column;
+  margin: 2vh auto auto auto;
+}
+
+.table{
+  width: 35vh;
+  display: flex;
+  justify-content: flex-end;
+  text-align: center;
+  background-color: #4dbf59;
+  border-radius: 10px;
+  color: #f7f8f7;
+  border: double;
+  flex-direction: column;
+  margin: 2vh auto auto auto;
+}
+
+.table_estatic{
+  color: #ffffff;
+  margin-top: 5vh;
+  background-color: #4dbf59;
+  text-align: center;
+  width: 70vh;
+  margin-left: 30vh;
+  margin-bottom: 5vh;
+}
+
+.image{
+  display: flex;
+  justify-content: center;
+}
