--- a/templates/historic.html
+++ b/templates/historic.html
@@ -10,7 +10,7 @@
 <body>
   <div class="container">
     <nav class="column">
-      <i class='bx bxs-leaf' style='color:#0d8a0a'></i>
+      <i class='bx bxs-leaf' style='color:#06ff02d3'></i>
       <br>
       <div class="links"><a href="{{ url_for('algorithm_screen')}}">ALGORITIMO</a></div>
       <div class="links"><a href="*">CONTA</a></div>
