--- a/static/algorithm.css
+++ b/static/algorithm.css
@@ -1,67 +1,70 @@
 body{
-    background-color: #000000;
-  }
-  /* GRID */
-  .container {
-    display: grid;
-    grid-template-columns: 0.2fr 0.2fr 1fr;
-    gap: 3px;
-    min-height: 97vh;
-  }
-  .column {
-    background-color: #2ba18c;
-    padding: 2px;
-    border: 1px solid #ccc;
-  }
-  /* ÍCONE */
-  .bxs-leaf:before {
-    font-size: 15vh;
-    margin-left: 6vh;
-  }
+  background-color: #000000;
+}
+/* GRID */
+.container {
+  display: grid;
+  grid-template-columns: 0.2fr 0.2fr 1fr;
+  gap: 3px;
+  min-height: 97vh;
+}
+.column {
+  background: rgb(35,136,67);
+  background: radial-gradient(circle, rgba(35,136,67,1) 0%, rgba(32,120,104,1) 100%);
+  padding: 2px;
+  border: 1px solid #ccc;
+}
+/* ÍCONE */
+.bxs-leaf:before {
+  font-size: 15vh;
+  margin-left: 6vh;
+}
+
   /* Itens da nav bar */
-  .links a{
-    text-decoration: none;
-    color: black;
-    font-size: 115%;
-    font-family: Arial, Helvetica, sans-serif;
-  }
-  
-  .links a:hover{
-    color: #ffffff;
-  }
-  
-  .links{
-    display: flex;
-    justify-content: center;
-    padding: 2vh 5vh 1vh 5vh;
-  }
-  
-  hr{
-    border: 1px outset #4dbf59;
-  }
-  
-  input{
-    width: 10vh;
-    background-color: #4fc367;
-    border-radius: 10px;
-  }
-  .form_style{
-    display:flex;
-    justify-content: center;
-    margin-top: 6vh;
-  }
-  
-  label{
-    width: 35px;
-    height: 35px;
-    display: flex;
-    background-color: white;
-    align-items: center;
-    justify-content: center;
-    border-radius: 35%;
-    border: 2px solid #ece917de;
-  }
-  
+.links a{
+  text-decoration: none;
+  color: black;
+  font-size: 115%;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.links a:hover{
+  color: #ffffff;
+}
+
+.links{
+  display: flex;
+  justify-content: center;
+  padding: 2vh 5vh 1vh 5vh;
+}
+
+hr{
+  border: 1px outset #4dbf59;
+}
+
+input{
+  width: 10vh;
+  background-color: #4fc367;
+  border-radius: 10px;
+}
+
+.form_style{
+  display:flex;
+  justify-content: center;
+  margin-top: 6vh;
+}
+
+label{
+  width: 35px;
+  height: 35px;
+  display: flex;
+  background-color: white;
+  align-items: center;
+  justify-content: center;
+  border-radius: 35%;
+  border: 2px solid #ece917de;
+}
+
 .button{
   width: auto;
   margin: 3.5vh 0vh 0vh 6vh;
@@ -69,7 +72,7 @@ body{
   border-radius: 15px;
   cursor: pointer;
 }
-  
+
 .button:hover{
   color: #ffffff;
   border-color: white;
@@ -97,6 +100,7 @@ p{
   border: double;
   flex-direction: column;
   margin: 2vh auto auto auto;
+  box-shadow: 5px 5px 10px darkgreen;
 }
 
 .table{
@@ -110,6 +114,12 @@ p{
   border: double;
   flex-direction: column;
   margin: 2vh auto auto auto;
+  border-radius: 7px;
+  box-shadow: 5px 5px 10px darkgreen;
+}
+
+td, th{
+  padding: 1vh;
 }
 
 .table_estatic{
@@ -117,9 +127,11 @@ p{
   margin-top: 5vh;
   background-color: #4dbf59;
   text-align: center;
-  width: 70vh;
-  margin-left: 30vh;
+  width: 85vh;
+  margin-left: 25vh;
   margin-bottom: 5vh;
+  border-radius: 7px;
+  box-shadow: 5px 5px 10px darkgreen;
 }
 
 .image{
