--- a/static/algorithm.css
+++ b/static/algorithm.css
@@ -13,6 +13,8 @@ body{
   background: radial-gradient(circle, rgba(35,136,67,1) 0%, rgba(32,120,104,1) 100%);
   padding: 2px;
   border: 1px solid #ccc;
+  display: flex;
+  flex-direction: column;
 }
 /* ÍCONE */
 .bxs-leaf:before {
@@ -104,18 +106,14 @@ p{
 }
 
 .table{
-  width: 35vh;
+  width: auto;
   display: flex;
   justify-content: flex-end;
   text-align: center;
-  background-color: #4dbf59;
   border-radius: 10px;
   color: #f7f8f7;
-  border: double;
   flex-direction: column;
   margin: 2vh auto auto auto;
-  border-radius: 7px;
-  box-shadow: 5px 5px 10px darkgreen;
 }
 
 td, th{
@@ -137,4 +135,16 @@ td, th{
 .image{
   display: flex;
   justify-content: center;
+}
+
+#tableUser{
+  background-color: rgba(21, 255, 0, 0.233);
+  border-radius: 15px;
+  padding: 2vh;
+}
+
+.user_div{
+  display: flex;
+  flex-grow: 1;
+  flex-direction: column-reverse;
 }
