--- a/templates/teste.html
+++ b/templates/teste.html
@@ -6,6 +6,14 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello world!</h1>
+    {% with messages = get_flashed_messages() %}
+    {% if messages %}
+    <ul>
+        {% for message in messages %}
+        <li>{{ message }}</li>
+        {% endfor %}
+    </ul>
+    {% endif %}
+    {% endwith %}
 </body>
 </html>
