--- a/templates/algorithm.html
+++ b/templates/algorithm.html
@@ -20,7 +20,7 @@
     <hr>
     <p>ALGORITIMO</p>
     <div class="user_div">
-      <p>usuário {{user_log}}</p>
+      <p>{{user_log}}</p>
     </div>
   </nav>
   <div class="column">
