--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,7 @@
     <label for="login">Login</label>
     <p>Entre com seu login e senha!</p>
     <input type="text" id="usuario" name="usuario" placeholder="usuário"><br>
-    <input type="text" id="senha" name="senha" placeholder="senha"><br>
+    <input type="password" id="senha" name="senha" placeholder="senha"><br>
     <a href="*">Esqueceu a senha?</a><br>
     <input class="button" type="submit" value="CONFIRMAR">
   </form>
