--- a/static/admin.css
+++ b/static/admin.css
@@ -1,10 +1,12 @@
 nav {
     color: white;
     font-family: Arial, Helvetica, sans-serif;
-    text-align: center;
-    padding: 0.1vh;
+    padding: 1vh;
     height: auto;
     background-color: #207868;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .order{
@@ -60,5 +62,14 @@ form{
 }
 
 label{
+    color: white;
+}
+
+a{
+    text-decoration: none;
+    color: rgb(0, 255, 0);
+}
+
+a:hover{
     color: white;
 }
