--- a/templates/algorithm.html
+++ b/templates/algorithm.html
@@ -16,42 +16,42 @@
     <i class='bx bxs-leaf' style='color:#04ff00d0'></i>
     <br>
     <div class="links"><a href="{{ url_for('historic')}}">HISTÓRICO</a></div>
-    <div class="links"><a href="*">CONTA</a></div>
+    <div class="links"><a href="{{ url_for('log_out')}}">SAIR</a></div>
     <hr>
     <p>ALGORITIMO</p>
     <div class="user_div">
-      <p>{{user_log}}</p>
+      <p id="user">{{user_log}}</p>
     </div>
   </nav>
   <div class="column">
     <form method="POST" action="/calc">
       <div class="form_style">
         <label for="PH"><abbr title="Potencial hidrogênico"><b>PH</b></abbr></label>
-        <input type="number" id="PH" name="PH" autofocus min="0" max="14">
+        <input type="number" id="PH" name="PH" autofocus min="0" max="14" step="0.1">
       </div>
       <div class="form_style">
         <label for="fosforo"><abbr title="Fósforo"><b>P</b></abbr></label>
-        <input type="number" id="fosforo" name="fosforo" min="0" max="150">
+        <input type="number" id="fosforo" name="fosforo" min="0" max="150" step="0.1">
       </div>
       <div class="form_style">
         <label for="potassio"><abbr title="Potássio"><b>K</b></abbr></label>
-        <input type="number" id="potassio" name="potassio" min="0" max="220">
+        <input type="number" id="potassio" name="potassio" min="0" max="220" step="0.1">
       </div>
       <div class="form_style">
         <label for="nitrogenio"><abbr title="Nitrogênio"><b>N</b></abbr></label>
-        <input type="number" id="nitrogenio" name="nitrogenio" min="0" max="200">
+        <input type="number" id="nitrogenio" name="nitrogenio" min="0" max="200" step="0.1">
       </div>
       <div class="form_style">
         <label for="rainfall"><abbr title="Chuva"><i class='bx bxs-cloud-rain' style='color:#6c5cea'></i></abbr></label>
-        <input type="number" id="rainfall" name="rainfall" min="0" max="300">
+        <input type="number" id="rainfall" name="rainfall" min="0" max="300" step="0.1">
       </div>
       <div class="form_style">
         <label for="temp"><abbr title="Temperatura"><i class='bx bxs-thermometer' style='color:#d22b2b; font-size: 26px;'></i></abbr></label>
-        <input type="number" id="temp" name="temp" min="15" max="42">
+        <input type="number" id="temp" name="temp" min="15" max="42" step="0.1">
       </div>
       <div class="form_style">
         <label for="water"><abbr title="Umidade"><i class='bx bxs-droplet' style='color:#3d67dc'></i></abbr></label>
-        <input type="number" id="water" name="water" min="25" max="100">
+        <input type="number" id="water" name="water" min="25" max="100" step="0.1">
       </div>
       <input class="button" disabled value="CONFIRMAR" id="calcButton" type="submit">
     </form>
@@ -74,8 +74,10 @@
     </tr>
       </table>
     </div>
+    <br>
     <div class="table">
         <table>
+          <caption>DADOS USUÁRIO</caption>
             <tr>
               <th colspan="2" id="tableUser">PH: {{PH}}</th>
               <th colspan="2" id="tableUser">Potássio: {{potassio}}</th>
@@ -89,6 +91,7 @@
     </div>
     <div class="table_estatic">
     <table border="1">
+      <caption>MÉDIA DOS DADOS SOBRE A CULTURA</caption>
       <tr>
         <th>Rótulo</th>
         <td>PH</td>
@@ -124,31 +127,48 @@
   <div class="image">
     {{ graphic | safe }}
   </div>
+  <div class="table">
+    <table>
+      <caption>DIFERENÇA ENTRE OS DADOS DO USUÁRIO PARA AS MÉDIAS</caption>
+        <tr>
+          <th colspan="2" id="tableUser">PH: {{dif_PH}}</th>
+          <th colspan="2" id="tableUser">POTÁSSIO: {{dif_fosforo}}</th>
+          <th colspan="2" id="tableUser">FÓSFORO: {{dif_potassio}}</th>
+          <th colspan="2" id="tableUser">NITROGÊNIO: {{dif_nitrogenio}}</th>
+          <th colspan="2" id="tableUser"><i class='bx bxs-cloud-rain' style='color:#6c5cea'></i> {{dif_rainfall}}</th>
+          <th colspan="2" id="tableUser"><i class='bx bxs-thermometer' style='color:#d22b2b; font-size: 26px;'></i> {{dif_temp}}</th>
+          <th colspan="2" id="tableUser"><i class='bx bxs-droplet' style='color:#3d67dc'></i> {{dif_water}}</th>
+        </tr>
+    </table>
+</div>
     {% endif %}
   </div>
 
  <script>
-        function checkFields() {
-            var PH = document.getElementById('PH').value;
-            var fosforo = document.getElementById('fosforo').value;
-            var potassio = document.getElementById('potassio').value;
-            var rainfall = document.getElementById('rainfall').value;
-            var nitrogenio = document.getElementById('nitrogenio').value;
-            var temp = document.getElementById('temp').value;
-            var water = document.getElementById('water').value;
-            var calcButton = document.getElementById('calcButton');
-            
-            if (PH && fosforo && potassio && rainfall && nitrogenio && temp && water) {
-                calcButton.disabled = false;
-            } else {
-                calcButton.disabled = true;
-            }
-        }
+function checkFields() {
+    var PH = document.getElementById('PH').value;
+    var fosforo = document.getElementById('fosforo').value;
+    var potassio = document.getElementById('potassio').value;
+    var rainfall = document.getElementById('rainfall').value;
+    var nitrogenio = document.getElementById('nitrogenio').value;
+    var temp = document.getElementById('temp').value;
+    var water = document.getElementById('water').value;
+    var calcButton = document.getElementById('calcButton');
 
-        var formFields = document.querySelectorAll('input[type="number"]');
-        formFields.forEach(function (field) {
-            field.addEventListener('input', checkFields);
-        });
+    if (!PH && !fosforo && !potassio && !rainfall && !nitrogenio && !temp && !water && !ultima_execucao) {
+        calcButton.disabled = true;
+    } else {
+        calcButton.disabled = false;
+    }
+}
+
+var formFields = document.querySelectorAll('input[type="number"]');
+formFields.forEach(function (field) {
+    field.addEventListener('input', checkFields);
+});
+
+checkFields();
+
     </script>
 </body>
 
